package dominio.mascota;

public enum Clase {
  PERRO, GATO;
}
