package dominio.personas;

public enum TipoDeDocumento {
  DNI, LC, LE, CI, PASAPORTE
}
