@startuml RescateDePatitas

'''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
'''''''''''''''''''''''''''''''''''''Dominio'''''''''''''''''''''''''''''''''
'''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''

class Contacto{
  apellido
  nombre
  teléfono
  email
}

class Mascota{
  clase
  nombre
  apodo
  edad
  sexo
  descripcionFísica
  fotos[]
  características[]
}

enum Clase{
  GATO
  PERRO
}

class Documento{
  tipo
  numero
}

enum TipoDeDocumento{
  DNI
  LC /' Libreta Cívica '/
  LE /' Libreta de Enrolamiento '/
  CI /' Cédula de Identidad '/
  PASAPORTE
}

class Rescate{
  rescatista
  mascota
  fotos[]
  descripcion
  ubicacion
  fecha
}

class Coordenadas{
  latitud
  longitud
}

class Usuario{
  username
  password
}

class Administrador{
  agregarUnaCaracterística()
  eliminarUnaCaracterística()

}

class Dueño{
  mascotasRegistradas[]
  registrarUnaMascota()
  esMiMascota()
}

class Rescatista{
  direccion
  registrarRescate()
}

class DatosPersona{
  apellido
  nombre
  fechaDeNacimiento
  documento
  contacto
}

class Característica{
  título
  opciones[]
  agregarOpcion()
  tieneEstaOpcion()
}


Publicacion -d-> Rescate
class Publicacion{
  rescate
  aprobada
  asociacionAsignada
  aprobar()
  rechazar()
  datosNoSensibles()
  fotos()
  estaAprobada()
}

Publicacion -d-> EstadoPublicacion
enum EstadoPublicacion{
  APROBADO
  RECHAZADO
  PENDIENTE
}

'''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
''''''''''''''''''''''''''''''''Repositorios'''''''''''''''''''''''''''''''''
'''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''

abstract class Repositorio {
  repositorio
  registrar()
  borrar()
  buscar()
  filtrar()
  cantidadDeRegistros()
  contar()
  existe()
  vaciar()
  
}

class RepositorioDueños{
  duenioDe()
}


class RepositorioMascotas{
  obtenerDueñoDe()
}


class RepositorioRescates{
  últimasMascotasEncontradas()
  confirmarMascotaEncontrada()
}

class RepositorioCaracteristicas{
  existeCaracteristica()
  borrarCaracteristica()
  obtenerCaracteristica()
  opcionesDe()
}

class RepositorioAdministradores{

}

class RepositorioValidaciones{
  validatePassword()
}


'''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
'''''''''''''''''''''''''Validación de Contraseñas'''''''''''''''''''''''''''
'''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''

abstract Validation{

  validatePassword()
  condition()
  error()

}
abstract RegexValidation{
  regex()
}

class CommonPassword{}
class PasswordLength{}
class LowerPassword{}
class UpperPassword{}
class NumberPassword{}

'''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
'''''''''''''''''''''''''Relaciones de Dominio'''''''''''''''''''''''''''''''
'''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''


Dueño         -u->    DatosPersona
Rescatista    -u->    DatosPersona
DatosPersona  -r->    Documento
DatosPersona  -l->    Contacto
Rescate       -u->    Rescatista
Dueño         -u-|>   Usuario
Rescate       -d->    Mascota
Documento     -r->    TipoDeDocumento
Mascota       -l->    Clase
Dueño         -d->"*" Mascota
Administrador -u-|>   Usuario
Rescate       -l->    Coordenadas

'''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
'''''''''''''''''''''''''Relaciones de Repositorios''''''''''''''''''''''''''
'''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''

RepositorioDueños           -u-> "*" Dueño
RepositorioMascotas         -u-> "*" Mascota
RepositorioRescates         -u-> "*" Rescate
RepositorioAdministradores  -u-> "*" Administrador
RepositorioCaracteristicas  ->   "*" Característica
RepositorioValidaciones     ->   "*" Validation

'''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
''''''''''''''''''''''''''Herencias de Repositorios''''''''''''''''''''''''''
'''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''

RepositorioDueños -d-|> Repositorio
RepositorioRescates -d-|> Repositorio
RepositorioMascotas -d-|> Repositorio
RepositorioCaracteristicas -l-|> Repositorio
RepositorioAdministradores -d--|> Repositorio



RegexValidation -u-|> Validation
CommonPassword  -u-|> Validation
PasswordLength  -u-|> Validation
LowerPassword   -u-|> RegexValidation
UpperPassword   -u-|> RegexValidation
NumberPassword  -u-|> RegexValidation


@enduml
